--- a/styles.css
+++ b/styles.css
@@ -35,7 +35,7 @@ html {
 }
 
 .site-header {
-    background-color: #4CAF50;
+    background-color: #387F9E;
     padding: 20px;
     text-align: center;
     border-radius: 8px;
