--- a/styles.css
+++ b/styles.css
@@ -42,7 +42,7 @@ html {
 }
 
 .site-nav {
-    background-color: #FFC0CB;
+    background-color: #68D2E2;
     padding: 10px;
     margin-top: 20px;
     border-radius: 8px;
