--- a/styles.css
+++ b/styles.css
@@ -67,7 +67,7 @@ html {
 }
 
 .section {
-    background-color: #222;
+    background-color: #289aac;
     padding: 20px;
     margin-top: 20px;
     border-radius: 8px;
