--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,23 @@ body {
     color: #ffffff; 
     font-family: 'Comic Sans MS', cursive, sans-serif;
 }
-
+{width: 100vw;
+    height: 100vh;
+    overflow: hidden;
+    background-image: linear-gradient(0deg, #022244, #58c8da);
+    margin: 0;}
+    .about {
+    position: fixed;
+    z-index: 10;
+    bottom: 10px;
+    right: 10px;
+    width: 40px;
+    height: 40px;
+    display: flex;
+    justify-content: flex-end;
+    align-items: flex-end;
+    transition: all 0.2s ease;
+}
 html {
     scroll-behavior: smooth;
   }
@@ -94,7 +110,7 @@ html {
 }
 
 .site-footer {
-    background-color: #555;
+    background-color: #056ea7;
     color: white;
     text-align: center;
     padding: 20px;
@@ -121,13 +137,13 @@ img {
 }
 
 
-
-
-
-
-
-
-
+myVideo {
+    position: fixed;
+    right: 0;
+    bottom: 0;
+    min-width: 100%;
+    min-height: 100%;
+  }
 
 
 
