--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,56 @@
 body {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    margin: 10;
+    font-family: Arial, sans-serif ;
+    background-color: #ffffff;
+}
+
+.login-container {
+    background-color: #ffffffab;
+    padding: 10px;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    text-align: center;
+}
+
+.login-container h2 {
+    margin-bottom: 10px;
+}
+
+.login-container label {
+    display: block;
+    margin: 5px 0 5px;
+}
+
+.login-container input {
+    width: 90%;
+    padding: 10px;
+    margin-bottom: 20px;
+    border: 1px solid #ffffff;
+    border-radius: px;
+}
+
+.login-container button {
+    width: 100%;
+    padding: 2px;
+    background-color: #007bff;
+    border: none;
+    border-radius: 4px;
+    color: #fff;
+    font-size: 16px;
+    cursor: pointer;
+}
+
+.login-container button:hover {
+    background-color: #0056b3;
+}
+
+body {
     background-image: url("background.jpg");
-    color: #ffffff; 
+    color: #02002c; 
     font-family: 'Comic Sans MS', cursive, sans-serif;
 }
 
@@ -90,7 +140,7 @@ html {
 }
 
 .section-title {
-    color: #FFD700;
+    color: #010262;
 }
 
 .site-footer {
@@ -100,6 +150,7 @@ html {
     padding: 20px;
     margin-top: 20px;
     border-radius: 8px;
+    
 }
 
 .content div {
@@ -121,19 +172,71 @@ img {
 }
 
 
-myVideo {
-    position: fixed;
-    right: 0;
-    bottom: 0;
-    min-width: 100%;
-    min-height: 100%;
-  }
 
 
 
 
 
+.contact {
+    padding: 40px 350px;
+    background-color: #289aac;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    margin: 20px auto;
+    max-width: 600px;
+    border-radius: 8px;
+}
 
+.section-title {
+    text-align: center;
+    font-size: 24px;
+    margin-bottom: 20px;
+}
 
+.contact p {
+    text-align: center;
+    font-size: 16px;
+    margin-bottom: 10px;
+}
 
+.container {
+    display: flex;
+    justify-content: center;
+}
 
+form {
+    width: 100%;
+}
+
+.form-group {
+    margin-bottom: 15px;
+}
+
+.form-group label {
+    display: block;
+    font-size: 14px;
+    margin-bottom: 5px;
+}
+
+.form-group input, 
+.form-group textarea {
+    width: 100%;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    font-size: 14px;
+}
+
+input[type="submit"] {
+    background-color: #007bff;
+    color: #fff;
+    border: none;
+    border-radius: 4px;
+    padding: 10px 20px;
+    font-size: 16px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+}
+
+input[type="submit"]:hover {
+    background-color: #0056b3;
+}
