--- a/styles.css
+++ b/styles.css
@@ -3,49 +3,9 @@ body {
     justify-content: center;
     align-items: center;
     height: 100vh;
-    margin: 10;
-    font-family: Arial, sans-serif ;
-    background-color: #ffffff;
-}
-
-.login-container {
-    background-color: #ffffffab;
-    padding: 10px;
-    border-radius: 8px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    text-align: center;
-}
-
-.login-container h2 {
-    margin-bottom: 10px;
-}
-
-.login-container label {
-    display: block;
-    margin: 5px 0 5px;
-}
-
-.login-container input {
-    width: 90%;
-    padding: 10px;
-    margin-bottom: 20px;
-    border: 1px solid #ffffff;
-    border-radius: px;
-}
-
-.login-container button {
-    width: 100%;
-    padding: 2px;
-    background-color: #007bff;
-    border: none;
-    border-radius: 4px;
-    color: #fff;
-    font-size: 16px;
-    cursor: pointer;
-}
-
-.login-container button:hover {
-    background-color: #0056b3;
+    margin: 0;
+    font-family: Arial, sans-serif;
+    background-color: #021733;
 }
 
 body {
@@ -53,8 +13,6 @@ body {
     color: #02002c; 
     font-family: 'Comic Sans MS', cursive, sans-serif;
 }
-
-
 
 html {
     scroll-behavior: smooth;
@@ -170,12 +128,6 @@ img {
         flex-direction: column;
     }
 }
-
-
-
-
-
-
 
 .contact {
     padding: 40px 350px;
