--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,19 @@
+
+.container {
+    background-color: #abceff;
+    border: none;
+    color: rgb(0, 0, 0);
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
+    border-radius: 12px;
+}
+
+
 body {
     display: flex;
     justify-content: center;
@@ -13,6 +29,7 @@ body {
     color: #02002c; 
     font-family: 'Comic Sans MS', cursive, sans-serif;
 }
+
 
 html {
     scroll-behavior: smooth;
